styles.css
/* ... */
      .tag-teal {
        background-color: #47bcd4;
      }
      .tag-purple {
        background-color: #5e76bf;
      }
      .tag-pink {
        background-color: #cd5b9f;
      }
      
      .card-body p {
        font-size: 1rem;

      }
      .user {
        display: flex;
        margin-top: auto;
      }
      
      .user img {
        border-radius: 50%;
        width: 40px;
        height: 40px;
        margin-right: 10px;
      }
      .user-info h5 {
        margin: 0;
      }
      .user-info small {
        color: #545d7a;
      }
      
    body {
    background-image: url(/images/image77.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    /* width: 100%;
    height: 100vh; */
    font: normal 400 20px "Josefin Sans", sans-serif;
    background-attachment: fixed;
    }
    #section05 a {
    padding-top: 70px;
    }

    #section05 a span {
        position: absolute;
        top: 0;
        left: 50%;
        width: 24px;
        height: 24px;
        margin-left: -12px;
        border-left: 1px solid #fff;
        border-bottom: 1px solid #fff;
        -webkit-transform: rotate(-45deg);
        transform: rotate(-45deg);
        -webkit-animation: sdb05 1.5s infinite;
        animation: sdb05 1.5s infinite;
        box-sizing: border-box;
        }

        @-webkit-keyframes sdb05 {
        0% {
            -webkit-transform: rotate(-45deg) translate(0, 0);
        opacity: 0;
        }
        50% {
            opacity: 1;
        }
        100% {
            -webkit-transform: rotate(-45deg) translate(-20px, 20px);
            opacity: 0;
        }
        }
        @keyframes sdb05 {
        0% {
            transform: rotate(-45deg) translate(0, 0);
            opacity: 0;
        }
        50% {
            opacity: 1;
        }
        100% {
            transform: rotate(-45deg) translate(-20px, 20px);
        opacity: 0;
    }
    }
    navbar {
    color: white;
    width: 8%;
    position: fixed;
    z-index: 1;
    padding: 1%;
    }

    .NavLinks {
    color: white;
    text-decoration: none;
    margin-right: 0%;
    position: sticky;
    }
    .Navs a:hover {
    background-color: blue;
    }

    .firstcontent {
    opacity: 0.8;
    left: 50%;
    position: absolute;
    top: 46%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 25px;
    margin-bottom: 0%;
    }
    .firstcontent p {
    text-align: left;
    padding: 0%;
    margin: 0%;
    }
    .checkItOutBtn{
        
    position: absolute;
    bottom: 10px;

    }
    .about {
    color: white;
    justify-content: center;
    display: inline-block;

    }
    .about h2 {
        display: flex;
    justify-content: center;
    padding-top: 5%;
    padding-bottom: 2%;
    }
    .about .about-icons {
    padding: 2%;
    font-size:50px;
    text-align: center;
    align-items: center;
    justify-content: center;
    margin-bottom: 5%;
    }
    .about .about-icons i {
    padding: 2%;
    margin-bottom: 2%;
    }
    .margin-bottom0{
        margin-bottom: 0;
    }
    .Projects {
    align-items: center;
    text-align: center;
    color: white;
    justify-content: center;
    height: fit-content;
    }
    .Projects h2 {
    margin-bottom: 2%;
    justify-content: center;
    }
    .Projects .wrappercards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    padding: 100px;
    margin-left: 5%;
    }
    .Projects .wrappercards .card {
    color: white;
    background-color: #adadad;
    border-radius: 10%;
    border: 2px solid black;
    height: 310px;
    width: 250px;
    margin-bottom: 5%;
    opacity: 90%;
    

    }
    .Projects .wrappercards .card h5 {
    font-size: 20px;
    color: white;
    margin-bottom: 5%;
    }
    .Projects .wrappercards .card:hover {
    background-color: black;
    color: white;
    box-shadow: rgba(0, 0, 0, 0.5);
    z-index: 100;
    border: 2px solid black;
    }
    .Projects .wrappercards .card p {
    font-size: 15px;
    }
    .Projects .wrappercards .card .card-img-top {
    height: 40%;
    width: 60%;
    border-radius: 30%;
    padding: 1%;
    }
    .Projects .wrappercards .card .card-body .card-bottom{
    display: flex;
    flex-direction: row;
    color: white;
    justify-content: center;
    position: relative;
    vertical-align: bottom;
    }
    .Projects .wrappercards .card .card-body .card-bottom:hover{
        color: white;
    }
    .Projects .wrappercards .card .card-body .card-bottom:visited{
        color: white;
    }
    .contact {
    text-align: center;
    color: white;
    margin-top: 0%;
    margin-bottom: 10px;
    height: 350px;
    }
    .contact h1 {
    /* margin-top: 4%; */
    }
    
/* .button-2 {
    background-color: rgba(51, 51, 51, 0.05);
    border-radius: 8px;
    border-width: 0;
    color: #333333;
    cursor: pointer;
    display: inline-block;
    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    font-weight: 500;
    line-height: 20px;
    list-style: none;
    margin: 0;
    padding: 10px 12px;
    text-align: center;
    transition: all 200ms;
    vertical-align: baseline;
    white-space: nowrap;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
  } */

.button-13 {
  background-color: #fff;
  border: 1px solid #d5d9d9;
  border-radius: 8px;
  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
  box-sizing: border-box;
  color: #0f1111;
  cursor: pointer;
  display: inline-block;
  font-family: "Amazon Ember",sans-serif;
  font-size: 13px;
  line-height: 29px;
  padding: 0 10px 0 11px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: middle;
  width: 100px;
}

.button-13:hover {
  background-color: #f7fafa;
}

.button-13:focus {
  border-color: #008296;
  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
  outline: 0;
}
/* ... */

